new css for small thumbs, screenshots

--- a/css/file_attachment_field.css
+++ b/css/file_attachment_field.css
@@ -157,6 +157,10 @@ template, .unsupported {display:none;}
   height:20px;  
 }
 
+.fileattachment ul.file-attachment-field-previews.grid .small .file-meta {
+  height:15px;
+  padding: 2px 8px;
+}
 .fileattachment ul.file-attachment-field-previews.grid .medium .file-name {
   font-size:12px;
   line-height:12px;
